[project]
name = "dashboard-test"
version = "0.1.0"
description = ""
authors = [
    {name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org"},
]
dependencies = [
    "panel>=1.4.1",
    "pandas>=2.2.2",
    "polars>=0.20.19",
    "jupyterlab>=4.1.6",
    "hvplot>=0.9.2",
    "pyarrow>=15.0.2",
    "bokeh>=3.4.1",
    "jupyter-bokeh>=4.0.1",
    "seaborn>=0.13.2",
    "plotly>=5.20.0",
    "watchfiles>=0.21.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
