[project]
name = "dashboard-test"
version = "0.1.0"
description = ""
authors = [
    {name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org"},
]
dependencies = [
    "panel>=1.4.1",
    "pandas>=2.2.2",
    "polars>=0.20.19",
    "jupyterlab>=4.1.6",
    "hvplot>=0.9.2",
    "pyarrow>=15.0.2",
    "bokeh>=3.4.1",
    "seaborn>=0.13.2",
    "plotly>=5.20.0",
    "watchfiles>=0.21.0",
    "npc-lims>=0.1.168",
    "jupyter-bokeh>=4.0.5",
    "numba>=0.60.0",
    "aind-session>=0.1.10",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
panel = "panel serve src/dashboard_test/area_coverage.py --show --autoreload --address 10.128.37.38 --allow-websocket-origin=* --global-loading-spinner"
panel_test = "panel serve src/dashboard_test/sorting.py --show --autoreload --address 10.128.37.38 --port 8080 --allow-websocket-origin=*"